--- a/ZjhMobile/project.json
+++ b/ZjhMobile/project.json
@@ -12,6 +12,8 @@
 
     "jsList" : [
         "src/resource.js",
-        "src/app.js"
+        "src/app.js",
+        "src/appbundle.js",
+        "src/bundle.js"
     ]
 }
