--- a/ZjhMobile/project.json
+++ b/ZjhMobile/project.json
@@ -14,6 +14,7 @@
         "src/resource.js",
         "src/app.js",
         "src/appbundle.js",
-        "src/bundle.js"
+        "src/bundle.js",
+        "src/tools/md5.js"
     ]
 }
